--- a/index.html
+++ b/index.html
@@ -1,10 +1,17 @@
-<!doctype HTML>
+<!DOCTYPE html>
 <html lang="en">
-<head>
-<meta title="Odin recipes">
-<meta charset="UTF-8">
-</head>
-<body>
-<h1>Recipes</h1>
-</body>
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Odin Recipes</title>
+    <link rel="stylesheet" href="./index.css">
+    <link rel="icon" href="./favicon.ico" type="image/x-icon">
+  </head>
+  <body>
+    <main>
+        <h1>Odin Recipes</h1>  
+    </main>
+	<script src="./index.js"></script>
+  </body>
 </html>
