--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
   </head>
   <body>
     <main>
-        <h1>Odin Recipes</h1>  
+        <h1>Odin Recipes</h1> 
+	<a href="./lasagna.html">Lasagna Recipe</a>
     </main>
 	<script src="./index.js"></script>
   </body>
