--- a/lasagna.html
+++ b/lasagna.html
@@ -10,7 +10,23 @@
   </head>
   <body>
     <main>
-        <h1>Lasagna</h1>  
+        <h1>Lasagna</h1>
+	    <img src="https://unsplash.com/photos/PgkGsxjvGB4">
+	    <h2>Best Lasgna ever</h2>
+	    <p>This lasgna is made with love</p>
+	    <p>You have never tried a lasagna like this one</p>
+	    <h3>Ingredients:</h3>
+	    <ul>
+		    <li>Lasagna case from Lidl</li>
+		    <li>Tha's it</li>
+	    </ul>
+	    <h3> Steps:</h3>
+	    <ol>
+		    <li>Heat the oven at 200 degress Celsius</li>
+		    <li>Remove the packaging and the plastice film</li>
+		    <li> Cook for 35 minutes, or untill it gets golden-brown</li>
+	    </ol>
+	    
     </main>
 	<script src="./index.js"></script>
   </body>
