--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <link rel="icon" href="./favicon.ico" type="image/x-icon">
   </head>
   <body>
+	  <nav>
+		  <a href="./index.html">HOME</a>
+	  </nav>
     <main>
         <h1>Odin Recipes</h1> 
 	<a href="./lasagna.html">Lasagna Recipe</a>
