--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <main>
         <h1>Odin Recipes</h1> 
 	<a href="./lasagna.html">Lasagna Recipe</a>
+	    <button onclick="myFunction()">Click me</button>
     </main>
 	<script src="./index.js"></script>
   </body>
